# nwpu_explorer_2018

./: .gitignore  Before_Install.md  CNAME  README.md  catkin_make_isolated.sh
camera_info/: CMakeLists.txt  package.xml
explorer/: joint_name
explorer/explorer_app_new/: CMakeLists.txt  CMakeLists.txt.user.18  ReadMe  package.xml  plugin.xml  setup.py
explorer/explorer_app_new/include/explorer_app_msgs/: app_arm_info.h  app_co2.h  app_robot_info.h
explorer/explorer_app_new/include/explorer_app_new/: explorer_app_new.h  light_warn.h  ui_widget.h  victim_choose.h  widget.h
explorer/explorer_app_new/resources/: Team explorer2.xcf  pictures.qrc
explorer/explorer_app_new/scrpits/: Explorer_App_New.py
explorer/explorer_app_new/src/: explorer_app_new.cpp  light_warn.cpp  main.cpp  pub_sub_widget.cpp~  victim_choose.cpp  widget.cpp
explorer/explorer_app_new/ui/: ui_victim_choose.h  ui_widget.h  victim_choose.ui  widget.ui
explorer/explorer_arm/: CMakeLists.txt  package.xml
explorer/explorer_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
explorer/explorer_audio/: package.xml
explorer/explorer_co2_sensor/: CMakeLists.txt
explorer/explorer_ik_switcher/: CMakeLists.txt  package.xml
explorer/explorer_joy_control/: package.xml
explorer/explorer_moveit/: CMakeLists.txt
explorer/explorer_moveit/include/explorer_msgs/: explorer_arm.h  explorer_low_level_data.h  explorer_reset.h  light_controlRequest.h
explorer/explorer_moveit/launch/: moveit_demo.launch
explorer/explorer_moveit/src/: explorer_moveit.cpp  explorer_moveit.h
explorer/explorer_robot_hardware/: CMakeLists.txt  readme.md  urdf命名规则
explorer/explorer_serial_protocol_two/: CMakeLists.txt
explorer/rescue_new/: manifest.xml  urdf.rviz
explorer/rescue_up6/: CMakeLists.txt  package.xml
explorer_big/explorer_driver/: CMakeLists.txt
explorer_big/explorer_launch/: package.xml
explorer_big/explorer_moveit/: package.xml  readme.md
explorer_big/explorer_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
explorer_big/explorer_moveit_listener/: CMakeLists.txt  package.xml
explorer_big/explorer_robot_hardware/: readme.md
explorer_big/explorer_serial_protocol/: package.xml
explorer_big/explorer_serial_protocol/include/explorer_serial_protocol/: SerialNode.h  SerialPort.h
explorer_big/explorer_serial_protocol/src/explorer_serial_protocol/: SerialNode.cpp
explorer_big/rescue_up6/: urdf.rviz
explorer_motion_detection/: CMakeLists.txt  package.xml
explorer_motion_detection/src/: motion_detection.cpp
explorer_navigation/: README.md  README_Before_Install.md  navigation-April.zip.desktop
explorer_navigation/hector_unused/: README.md
explorer_navigation/hector_worldmodel_msgs/: CMakeLists.txt
explorer_navigation/package_for_lidar/: README.md
explorer_pyaudio/: CMakeLists.txt  package.xml  setup.py
explorer_pyaudio/launch/: .explorer_pyaudio_explorer.launch.swp  explorer_pyaudio_explorer.launch  explorer_pyaudio_local.launch
explorer_pyaudio/scripts/: client_explorer.py  client_local.py  server_explorer.py  server_local.py
explorer_qrcode/src/: qrcode_detection.cpp
explorer_sc/explorer_audio/: CMakeLists.txt
explorer_sc/explorer_co2_sensor/: package.xml
explorer_sc/explorer_driver/: package.xml
explorer_sc/explorer_joint_state_driver/: CMakeLists.txt  package.xml
explorer_sc/explorer_joy_control/: CMakeLists.txt  readme.md
explorer_sc/explorer_msgs/: CMakeLists.txt  Untitled Document  package.xml
explorer_sc/explorer_robot_hardware/: LICENSE  urdf命名规则
explorer_sc/explorer_serial_protocol/: CMakeLists.txt
explorer_small/explorer_driver/: LICENSE
explorer_small/explorer_launch/: CMakeLists.txt  readme.md
explorer_small/explorer_robot_hardware/: package.xml  readme.md
explorer_small/explorer_serial_protocol_two/: package.xml
explorer_ui/: CMakeLists.txt  README.md  ReadMe.md  explorer_qt_startup.pro  explorer_qt_startup.pro.user.ef111fe  package.xml
explorer_ui/include/: explorer_thread.h  explorer_ui_ability.h  explorer_ui_control.h  login.h  mainwindow.h  pingtest.h  qexplorerserver.h  qroscam.h  qterminal.h  qusbcam.h
explorer_vision/explorer_qrcode/: CMakeLists.txt  package.xml
explorer_vision/explorer_qrcode/include/explorer_qrcode/: qrcode_detection.h
explorer_vision/explorer_qrcode/launch/: main_detection.launch  qrcode_detection.launch  start_explorer_leader_server.launch  start_explorer_vision.launch  start_explorer_vision_client.launch  start_explorer_vision_server.launch
explorer_vision/explorer_qrcode/src/: node.cpp  nodelet.cpp  qrcode_detection.cpp  qrcode_detection.cpp.b
explorer_vision/hector_object_tracker/: CMakeLists.txt  package.xml
explorer_vision/hector_object_tracker/launch/: base_link.launch  black_camera_look.launch  camera_look_at.launch  object_tracker.launch  object_tracker_sick_robot_day_2014.launch  victim.launch
explorer_vision/hector_object_tracker/src/: ObjectModel.cpp  ObjectModel.h  object_tracker.cpp  object_tracker.h  parameters.cpp  parameters.h  victim_service (复件).cpp  victim_service (复件).h  victim_service.cpp  victim_service.h
explorer_vision/ros_ssd/: CMakeLists.txt  ReadMe.md  package.xml  setup.py
explorer_vision/ros_ssd/lib/: SSD-Tensorflow
explorer_vision/ros_ssd/src/: ssd_detect.py
hector/hector_worldmodel/hector_worldmodel/: CHANGELOG.rst  package.xml
hector_navigation/hector_worldmodel_msgs/: package.xml
hector_navigation/hector_worldmodel_msgs/srv/: VerifyPercept.srv
image_warp/: CMakeLists.txt
ros_faster_rcnn/: .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py
ros_faster_rcnn/launch/: faster_rcnn_only.launch  faster_rcnn_only_right.launch  faster_rcnn_two.launch
ros_faster_rcnn/libraries/: py-faster-rcnn
ros_faster_rcnn/msg/: Detection.msg  DetectionArray.msg  DetectionFull.msg
ros_faster_rcnn/src/: Detect1.2.py  _init_paths.py  classes.txt  classes.txt.ba  imageLoader.py  simpleDetect.2.py  simpleDetect.py
src/: .rosinstall
udev-rules/: 20-usb-serials.rules  51-usb-flir-one.rules  99-camtest.rules  README.md  serial.rules
(+442 files in other folders)
