<?xml version="1.0"?>
<package>
	<name>ros_faster_rcnn</name>
	<version>0.0.1</version>
	<description>The a package that wraps py-faster-rcnn in a ROS node.</description>

	<maintainer email="chielbruin@tele2.nl">Chiel Bruin</maintainer>

	<license>MIT</license>

	<url type="repository">https://github.com/ChielBruin/ROS-faster-rcnn</url>

	<author email="chielbruin@tele2.nl">Chiel Bruin</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>cv_bridge</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<!-- The dependencies are not included yet, but when the py-faster-rcnn demo.py runs this should also run.-->

	<export> </export>
</package>
