<package>
  <name>hector_worldmodel</name>
  <version>0.3.2</version>
  <description>
    The hector_worldmodel stack helps to collect and fuse information about objects in the world.
    It is used by Team Hector Darmstadt to localize victims and QR codes in the Robocup Rescue
    scenario. See <a href="http://wiki.ros.org/hector_object_tracker">hector_object_tracker</a> for further details.
  </description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_worldmodel</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>hector_worldmodel_msgs</run_depend>
  <run_depend>hector_worldmodel_geotiff_plugins</run_depend>
  <run_depend>hector_object_tracker</run_depend>

  <!-- Dependencies needed only for running tests. -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <metapackage/>

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
